[package]
name = "meroxidizer"
version = "0.1.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"
repository = "https://github.com/PlasmaPower/meroxidizer/"
license = "BSD-3-Clause"

[workspace]
members = [
    "randomx-sys",
    "randomx",
]

[dependencies]
randomx = { path = "randomx" }
amcl = { git = "https://github.com/apache/incubator-milagro-crypto-rust.git", branch = "develop", default-features = false, features = ["bls381"] }
crossbeam-channel = "0.5.0"
structopt = "0.3.21"
parking_lot = "0.11.1"
rand = "0.7.3"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
log = { version = "0.4.11", features = ["release_max_level_debug"] }
env_logger = "0.8.2"
eyre = "0.6.3"
hex = "0.4.2"
serde-hex = "0.1.0"
num = "0.3.1"
hashbrown = "0.9.1"

[dev-dependencies]
criterion = "0.3.3"
hex-literal = "0.3.1"

[profile.release]
debug = true
